--- a/client/style.css
+++ b/client/style.css
@@ -143,7 +143,7 @@ textarea {
   width: 100%;
   width: 1200px;
   height: 193px;
-  color: #5436DA;
+  color: #957efc;
   font-size: 24px;
 background: #00000000;
   padding: 10px;
